[package]
name = "sprint"
version = "0.12.3"
edition = "2024"
description = "Command runner"
repository = "https://github.com/qtfkwk/sprint"
license = "MIT"

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
fhc = "0.11.3"
ignore = "0.4.25"
ignore-check = "0.3.2"
notify = "8.2.0"
owo-colors = "4.2.3"
rayon = "1.11.0"
shlex = "1.3.0"
