[package]
name = "sprint"
version = "0.12.4"
edition = "2024"
description = "Command runner"
repository = "https://github.com/qtfkwk/sprint"
license = "MIT"

[dependencies]
anstream = "1.0.0"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
fhc = "0.11.4"
ignore = "0.4.25"
ignore-check = "0.3.3"
notify = "8.2.0"
owo-colors = "4.3.0"
rayon = "1.11.0"
shlex = "1.3.0"
