[package]
name = "sprint"
version = "0.12.5"
edition = "2024"
description = "Command runner"
repository = "https://github.com/qtfkwk/sprint"
license = "MIT"

[dependencies]
anstream = "1.0.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
fhc = "0.12.0"
ignore = "0.4.25"
ignore-check = "0.3.4"
notify = "8.2.0"
owo-colors = "4.3.0"
rayon = "1.12.0"
shlex = "1.3.0"
